fixed errors for HTML validator;added heading to article in QuotationForm.js;added text visible for screen reader class

--- a/src/components/QuotationForm/QuotationForm.module.css
+++ b/src/components/QuotationForm/QuotationForm.module.css
@@ -1,3 +1,20 @@
+/* Text meant only for screen readers. */
+/* Citation */
+/* https://make.wordpress.org/accessibility/handbook/markup/the-css-class-screen-reader-text/ */
+.screenReaderText {
+    border: 0;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute !important;
+    width: 1px;
+    word-wrap: normal !important;
+}
+/* End Citation */
+
 /* Set height for LOGO in the Quotation Form */
 article img {
     height:4vh;
